test_suite/tests/ui/duplicate-attribute/rename-ser-rename-ser.stderr
error: duplicate serde attribute `rename`
  --> $DIR/rename-ser-rename-ser.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

